﻿0.8.0 [TBD]
[-] Remove IRepository and IQueryableRepository.
[*] Make errors formatters to use ValidationErrors instead of ValidationException.
[*] Fix exceptions serialization for netstandard 2.0 .
[+] Add support netstandard 2.1 .
[+] Tha package is built with nullable reference type annotations.

0.7.0 [2019-12-30]
[-] Update support netstandard from 1.2 to 2.0 .
[+] Add support net452.
[+] Add ValidationErrors for better validation errors storage support.
[-] Drop IUnitOfWork support.

0.5.4 [2019-06-28]
[+] SourceLink support.
[+] Add code field to DomainException and related exceptions.
[*] Fix ValidationException binary serialization.
[+] Add InfrastructureException.

0.5.1 [2018-05-07]
[+] Add custom message formatter for ValidationException.

0.5.0 [2018-05-03]
[-] Remove IsolationLevel parameter from IUnitOfWorkFactory.

0.3.0 [2017-08-13]
[-] Remove IAsyncRepository, move methods to IRepository.
[-] Remove GetOrAdd, GetOrThrow methods.
[*] Update async methods for repository, some methods were made as extensions.

0.2.5 [2017-08-07]
[*] ValidationException.ThrowFromObjectValidation takes into account MetadataType attribute.
[+] Async repository abstraction.

0.2.4 [2017-07-29]
[*] ValidationException: Take into account error messages without member names.

0.2.3 [2017-07-27]
[+] ValidationException.ThrowFromObjectValidation support for NET Standard.

0.2.2 [2017-07-17]
[*] Set dependencies only to .NET 4.0 and NET Standard 1.2 .

0.2.0 [2017-07-10]
[+] Change ValidationException class to accept multiple errors per member, ability to create from IValidatableObject.

0.1.2 [2017-06-07]
[*] IRepository: remove Get with includes, change signature for GetAll and Find with includes.

0.1.1 [2017-01-28]
[*] Update dependencies, .NET Core 1.1 support.
[*] Rename SecurityException to ForbiddenException.
[+] Add ConflictException and UnauthorizedException.
[+] Add Errors to ValidationException.
[+] Extension methods for IRepository. GetOrAdd and GetOrThrow.