@@ -1,53 +1,0 @@
-﻿// Copyright (c) 2015-2020, Saritasa. All rights reserved.
-// Licensed under the BSD license. See LICENSE file in the project root for full license information.
-
-using System;
-using System.Collections.Generic;
-using System.Linq;
-
-namespace Saritasa.Tools.Domain
-{
-    /// <summary>
-    /// Domain events manager in-memory implementation.
-    /// </summary>
-    public class DomainEventsManager : IDomainEventsManager
-    {
-        private readonly List<object> handlers = new List<object>();
-
-        /// <summary>
-        /// List of handlers.
-        /// </summary>
-        protected List<object> Handlers => handlers;
-
-        /// <inheritdoc />
-        public virtual void Register<TEvent>(
-            IDomainEventHandler<TEvent> handler) where TEvent : class
-        {
-            Handlers.Add(handler);
-        }
-
-        /// <inheritdoc />
-        public virtual void Raise<TEvent>(TEvent @event) where TEvent : class
-        {
-            var registeredHandlers = handlers.Where(h => h is IDomainEventHandler<TEvent>);
-            foreach (IDomainEventHandler<TEvent> handler in registeredHandlers)
-            {
-                handler.Handle(@event);
-            }
-        }
-
-        /// <summary>
-        /// Remove all handlers.
-        /// </summary>
-        public void Clear()
-        {
-            handlers.Clear();
-        }
-
-        /// <inheritdoc />
-        public bool HasHandlers<TEvent>() where TEvent : class
-        {
-            return handlers.Any(h => h is IDomainEventHandler<TEvent>);
-        }
-    }
-}
