@@ -17,8 +17,8 @@
     <repository type="git" url="https://github.com/Saritasa/SaritasaTools" commit="$(CommitHash)" />
     <dependencies>
       <group targetFramework="net452">
-        <dependency id="Saritasa.Tools.Domain" version="[3.0.0, )" />
-        <dependency id="EntityFramework" version="[6.0.0, )" />
+        <dependency id="Saritasa.Tools.Domain" version="[0.8.0, )" />
+        <dependency id="EntityFramework" version="[6.4.0, )" />
       </group>
     </dependencies>
     <releaseNotes>Release notes are at https://github.com/Saritasa/SaritasaTools/blob/master/src/Saritasa.Tools.EF6/CHANGELOG.txt</releaseNotes>
