@@ -4,7 +4,7 @@
     <id>Saritasa.Tools.EFCore3</id>
     <title>Saritasa Tools for Entity Framework Core 3</title>
     <version>0.0.0</version>
-    <description>The package is a part of Saritasa Tools project. Saritasa.Tools.EfCore3 contains implementations for unit of work, repository interfaces.</description>
+    <description>The package is a part of Saritasa Tools project. Saritasa.Tools.EfCore3 contains various useful extensions..</description>
     <summary>DDD implementatons for Entity Framework Core 3.</summary>
     <authors>Saritasa</authors>
     <owners>Saritasa</owners>
@@ -18,7 +18,12 @@
     <dependencies>
       <group targetFramework="netstandard2.0">
         <dependency id="Microsoft.EntityFrameworkCore" version="[3.1.0, )" />
-        <dependency id="Saritasa.Tools.Domain" version="[0.7.0, )" />
+        <dependency id="Saritasa.Tools.Domain" version="[0.8.0, )" />
+        <dependency id="Saritasa.Tools.Common" version="[3.0.0, )" />
+      </group>
+      <group targetFramework="netstandard2.1">
+        <dependency id="Microsoft.EntityFrameworkCore" version="[3.1.0, )" />
+        <dependency id="Saritasa.Tools.Domain" version="[0.8.0, )" />
         <dependency id="Saritasa.Tools.Common" version="[3.0.0, )" />
       </group>
     </dependencies>
