@@ -1,3 +1,5 @@
 ﻿0.7.1 [2020-01-13]
 [*] Initial release based on https://www.nuget.org/packages/Saritasa.Tools.EFCore2/ .
 [*] Fix comments spelling.
+[+] Tha package is built with nullable reference type annotations.
+[+] Add netstandard 2.1 support.
